--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "dependencies": {
     "@types/cors": "^2.8.17",
     "@types/mongoose": "^5.11.97",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.9.0",
     "@types/socket.io": "^3.0.2",
     "concurrently": "^9.1.0",
@@ -19,8 +23,8 @@
   },
   "scripts": {
     "build": "npx tsc",
-    "start": "node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
     "seed": "ts-node src/models/seeder.ts"
   }
 }
