--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   app:
     build: .
     ports:
-      - "${PORT:-3000}:3000"
+      - "${PORT:-3042}:3042"
     env_file:
       - .env
     environment:
@@ -17,7 +17,7 @@ services:
         condition: service_healthy
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:3042/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -31,6 +31,8 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+    networks:
+      - app-network
 
   mongodb:
     image: mongo:latest
@@ -55,6 +57,12 @@ services:
       nofile:
         soft: 65536
         hard: 65536
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
   mongodb_data: 
