--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1", 
+    "main-chess-lib": "file:./wasm"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
